WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
220093
[WebGL2] deqp/functional/gles3/texturespecification RGB4444 and RGB565 failures on Mac AMD
https://bugs.webkit.org/show_bug.cgi?id=220093
Summary
[WebGL2] deqp/functional/gles3/texturespecification RGB4444 and RGB565 failur...
Kenneth Russell
Reported
2020-12-22 10:47:44 PST
Several tests under deqp/functional/gles3/texturespecification/ are failing on macOS with AMD GPUs because of OpenGL driver bugs in the handling of the packed RGB565 and RGBA4444 texture formats. The following tests are failing sub-tests: deqp/functional/gles3/texturespecification/ teximage2d_pbo_2d_00.html teximage2d_pbo_2d_01.html texsubimage2d_pbo_2d_00.html texsubimage2d_pbo_2d_01.html texsubimage2d_pbo_cube_01.html These failures can be worked around by promoting these formats to RGB[A]8.
Attachments
Patch
(4.77 KB, patch)
2020-12-22 10:53 PST
,
Kenneth Russell
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Kenneth Russell
Comment 1
2020-12-22 10:53:34 PST
Note: related upstream ANGLE bug is
http://crbug.com/angleproject/5469
.
Kenneth Russell
Comment 2
2020-12-22 10:53:44 PST
Created
attachment 416675
[details]
Patch
EWS Watchlist
Comment 3
2020-12-22 10:54:35 PST
Note that there are important steps to take when updating ANGLE. See
https://trac.webkit.org/wiki/UpdatingANGLE
Alex Christensen
Comment 4
2020-12-22 12:28:13 PST
Comment on
attachment 416675
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=416675&action=review
> Source/ThirdParty/ANGLE/include/platform/FeaturesGL.h:513 > + "Packed color formats are buggy on Macs with AMD GPUs", &members, "
https://anglebug.com/4849
"};
Side note:
https://anglebug.com/
is currently using a TLS certificate only valid for *.google.com I suggest fixing that on your server.
EWS
Comment 5
2020-12-22 12:41:11 PST
Committed
r271062
: <
https://trac.webkit.org/changeset/271062
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 416675
[details]
.
Radar WebKit Bug Importer
Comment 6
2020-12-22 12:42:15 PST
<
rdar://problem/72597071
>
Kenneth Russell
Comment 7
2020-12-22 15:04:26 PST
(In reply to Alex Christensen from
comment #4
)
> Comment on
attachment 416675
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=416675&action=review
> > > Source/ThirdParty/ANGLE/include/platform/FeaturesGL.h:513 > > + "Packed color formats are buggy on Macs with AMD GPUs", &members, "
https://anglebug.com/4849
"}; > > Side note: >
https://anglebug.com/
is currently using a TLS certificate only valid for > *.google.com > I suggest fixing that on your server.
Thanks, will work with the ANGLE team to get it fixed.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug