[WebGL2] deqp/functional/gles3/texturespecification RGB4444 and RGB565 failures on Mac AMD https://bugs.webkit.org/show_bug.cgi?id=220093

Patch by Kenneth Russell <kbr@chromium.org> on 2020-12-22
Reviewed by Alex Christensen.

Promote the RGBA4444 and RGB565 texture formats to RGB[A]8 in
order to work around OpenGL driver bugs on macOS with AMD GPUs.

* include/platform/FeaturesGL.h:
* src/libANGLE/renderer/gl/formatutilsgl.cpp:
(rx::nativegl::GetNativeInternalFormat):
* src/libANGLE/renderer/gl/renderergl_utils.cpp:
(rx::nativegl_gl::InitializeFeatures):

Canonical link: https://commits.webkit.org/232659@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@271062 268f45cc-cd09-0410-ab3c-d52691b4dbfc